# mg2

./: .gitignore  CMakeLists.txt  arbol  main.cpp
animacion/cubos_giratorios/: frame_0005.mtl
include/: Camara.hpp  Fichero.hpp  Graphics2D.hpp  Graphics3D.hpp  Luz.hpp  MallaRecurso.hpp  Material.hpp  MaterialRecurso.hpp  Mesh.hpp  MeshAnimada.hpp  ModelAnimation.hpp  Particle.hpp  Particle3D.hpp  ParticleGenerator.hpp  ParticleGenerator3D.hpp  Shader.hpp  ShaderRecurso.hpp  Textura.hpp  TexturaRecurso.hpp  Window.hpp  arbol.hpp  entidad.hpp  gestorentidad.hpp  gestorrecursos.hpp  glad.h  motortag.hpp  recurso.hpp  recursoMalla.hpp
material/: materialBlackplastic.txt  materialBlackrubber.txt  materialBrass.txt  materialBronze.txt  materialChrome.txt  materialCopper.txt  materialCyanplastic.txt  materialCyanrubber.txt  materialEmerald.txt  materialGold.txt  materialGreenplastic.txt  materialGreenrubber.txt  materialJade.txt  materialObsidian.txt  materialPearl.txt  materialRedplastic.txt  materialRedrubber.txt  materialRuby.txt  materialSilver.txt  materialTurquoise.txt  materialWhiteplastic.txt  materialWhiterubber.txt  materialYellowplastic.txt  materialYellowrubber.txt
models/: def_block.mtl  karl_lowpoly.mtl  prota.mtl
shaders/: fragment_2d.glsl  fragment_particle3d.glsl  fragment_shader.glsl  fragment_text2d.glsl  fragment_texture2d.glsl  vertex_2d.glsl  vertex_particle3d.glsl  vertex_shader.glsl  vertex_text2d.glsl  vertex_texture2d.glsl
src/: Camara.cpp  Fichero.cpp  Graphics2D.cpp  Graphics3D.cpp  Luz.cpp  Mesh.cpp  MeshAnimada.cpp  ModelAnimation.cpp  ParticleGenerator.cpp  ParticleGenerator3D.cpp  Shader.cpp  Textura.cpp  Window.cpp  arbol.cpp  entidad.cpp  gestorEntidades.cpp  gestorRecursos.cpp  glad.c  main.cpp  motortag.cpp
